# parseEPO

./: .gitignore  404.html  LICENSE.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
before/: index.html
docs/: before.md  extract.md  index.md  load.md  quickstart.md  set-up.md  transform.md
eda/: config.json  eda.ipynb  queries.py  utils.py
extract/: index.html
io/: sampleEP0600000.p  sampleEP0600000.txt
io/sanity-checks/: nb_lines.csv
license/: index.html
load/: index.html
parseepo/: exception.py  serialize.py  utils.py  validate.py
quickstart/: index.html
search/: search_index.json
set-up/: index.html
tests/: test_parseepo.py
transform/: index.html
